--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,75 @@ html{
     font-size: 100%;
     font-family: 'Open Sans', sans-serif;
 }
+
+/* Container */
+.big-container{
+    width: 90%;
+    margin: 0 auto;
+}
+
+.small-container{
+    width: 75%;
+    margin: 0 auto;
+}
+
+/* Flexbox */
+.flex{
+    display: flex;
+}
+
+
+/* HEADER */
+
+/* Header top */
+.header-top{
+    width: 100%;
+    height: 100px;
+
+    /* DEBUG */
+    background-color: lightcoral;
+}
+
+.header-left,
+.header-right{
+    width: 50%;
+    
+    /* DEBUG */
+    border: 1px solid black;
+    height: 100%;
+}
+
+/* Header Left */
+.header-left{
+
+}
+
+/* Logo */
+.header-logo{
+    width: 20%;
+
+    /* DEBUG */
+    background-color: lightgreen;
+    border: 1px solid black;
+    height: 100%;
+}
+
+/* Link */
+.header-link{
+    width: 40%;
+
+    /* DEBUG */
+    background-color: blue;
+    border: 1px solid black;
+    height: 100%;
+}
+
+/* Header Right */
+.header-right{
+    justify-content: flex-end;
+}
+
+/* Link */
+.header-right .header-link{
+    width: 60%;
+}
