--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,12 @@ html{
 
 /* Container */
 .big-container{
-    width: 90%;
+    width: 80%;
     margin: 0 auto;
 }
 
 .small-container{
-    width: 75%;
+    width: 70%;
     margin: 0 auto;
 }
 
@@ -30,7 +30,7 @@ html{
 
 /* HEADER */
 
-/* Header top */
+/* HEADER TOP */
 .header-top{
     width: 100%;
     height: 100px;
@@ -38,7 +38,6 @@ html{
     /* DEBUG */
     background-color: lightcoral;
 }
-
 .header-left,
 .header-right{
     width: 50%;
@@ -47,12 +46,7 @@ html{
     border: 1px solid black;
     height: 100%;
 }
-
 /* Header Left */
-.header-left{
-
-}
-
 /* Logo */
 .header-logo{
     width: 20%;
@@ -62,7 +56,6 @@ html{
     border: 1px solid black;
     height: 100%;
 }
-
 /* Link */
 .header-link{
     width: 40%;
@@ -72,13 +65,54 @@ html{
     border: 1px solid black;
     height: 100%;
 }
-
 /* Header Right */
 .header-right{
     justify-content: flex-end;
 }
-
 /* Link */
 .header-right .header-link{
     width: 60%;
 }
+
+/* HEADER BOTTOM */
+.header-bottom{
+    background-color: #B4D0E7;
+    padding-top: 2em ;
+}
+/* Jumbotron */
+.jumbotron{
+    /* DEBUG */
+    height: 400px;
+}
+/* Jumbo Top */
+.jumbo-top{
+    width: 100%;
+
+    /* DEBUG */
+    min-height: 100px;
+    background-color: brown;
+}
+
+/* Jumbo Bottom */
+.jumbo-bottom{
+    width: 100%;
+}
+
+.jumbo-text{
+    width: 35%;
+
+    /* DEBUG */
+    min-height: 300px;
+    background-color: orange;
+    border: 1px solid black;
+}
+
+.jumbo-photo{
+    width: 65%;
+
+    /* DEBUG */
+    min-height: 300px;
+    background-color: blue;
+    border: 1px solid black;
+}
+
