--- a/css/style.css
+++ b/css/style.css
@@ -13,18 +13,27 @@ html{
 
 /* Container */
 .big-container{
-    width: 80%;
+    width: 70%;
     margin: 0 auto;
 }
 
 .small-container{
-    width: 70%;
+    width: 55%;
     margin: 0 auto;
 }
 
 /* Flexbox */
 .flex{
     display: flex;
+}
+
+/* Margin */
+.mg-t{
+    margin-top: 1.5em;
+}
+
+.mg-b{
+    margin-bottom: 1.5em;
 }
 
 
@@ -115,4 +124,70 @@ html{
     background-color: blue;
     border: 1px solid black;
 }
+
+
+/* MAIN */
+
+/* Section Piani Business */
+.business-plan{
+
+    /* DEBUG */
+    min-height: 500px;
+    background-color: grey;
+}
+
+/* Section top */
+.business-plan .section-top{
+    width: 100%;
+
+    /* DEBUG */
+    min-height: 100px;
+    background-color: #A2F4A5;
+    border: 1px solid black;
+}
+
+/* Section Content */
+.business-plan .section-content{
+    width: 100%;
+    align-items: stretch;
+    justify-content: space-between;
+
+    /* DEBUG */
+    min-height: 400px;
+    background-color: #fff;
+    border: 1px solid black;
+}
+
+.section-content .col{
+    width: calc(100% / 3 - 1em);
+    /* DEBUG */
+    background-color: orange;
+    border: 1px solid black;
+}
+
+.top-col{
+    width: 100%;
+    height: 60%;
+
+    /* DEBUG */
+    background-color: green;
+}
+
+.bottom-col{
+    width: 100%;
+    height: 40%;
+
+    /* DEBUG */
+    background-color: blue;
+}
+/* Section Footer */
+.business-plan .section-footer{
+    width: 100%;
+
+    /* DEBUG */
+    min-height: 100px;
+    background-color: yellow;
+    border: 1px solid black;
+}
+
 
