--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,53 @@ html{
     background-color: #466B2F;
 }
 
+/* SECTION PARTNER */
+.section-partner{
+    width: 100%;
+    height: 80vh;
+
+    /* DEBUG */
+}
+
+/* Section top */
+.section-partner .section-top{
+    height: 20%;
+
+    /* DEBUG */
+    background-color: #743333;
+}
+
+/* Section Main */
+.section-partner .section-main{
+    height: 60%;
+
+    /* DEBUG */
+    background-color: #DF9F3F;
+}
+
+.photo-partner{
+    width: 30%;
+
+    /* DEBUG */
+    min-height: 100%;
+    background-color: #A2D39B;
+}
+
+.text-partner{
+    width: 40%;
+
+    /* DEBUG */
+    background-color: #F5F5F5;
+}
+
+/* Section Footer */
+.section-partner .section-footer{
+    height: 20%;
+    background-color: #B4D0E7;
+}
+
+
+
 
 
 
