--- a/css/style.css
+++ b/css/style.css
@@ -114,20 +114,15 @@ a{
 /* HEADER BOTTOM */
 .header-bottom{
     background-color: #B4D0E7;
-    padding-top: 10em ;
+    padding-top: 10em;
+    padding-bottom: 2em;
 }
 /* Jumbotron */
-.jumbotron{
-    /* DEBUG */
-    height: 400px;
-}
 /* Jumbo Top */
 .jumbo-top{
     width: 100%;
-
-    /* DEBUG */
-    min-height: 100px;
-    background-color: brown;
+    font-size: 2rem;
+    padding-bottom: 1em;
 }
 
 /* Jumbo Bottom */
@@ -136,21 +131,28 @@ a{
 }
 
 .jumbo-text{
-    width: 35%;
+    width: 30%;
+    font-size: 1.2rem;
+}
 
-    /* DEBUG */
-    min-height: 300px;
-    background-color: orange;
-    border: 1px solid black;
+.jumbo-text p{
+    margin-bottom: 1.5em;
+}
+
+.jumbo-text span{
+    display: block;
+    margin-top: 1.5em;
+    margin-bottom: 3em;
+}
+
+.jumbo-text i{
+    font-size: 3rem;
 }
 
 .jumbo-photo{
-    width: 65%;
+    width: 70%;
 
-    /* DEBUG */
-    min-height: 300px;
-    background-color: blue;
-    border: 1px solid black;
+
 }
 
 
