--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,12 @@ html{
 
 /* Container */
 .big-container{
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
 }
 
 .small-container{
-    width: 55%;
+    width: 65%;
     margin: 0 auto;
 }
 
@@ -49,7 +49,6 @@ ul{
 
 ul li{
     display: inline-block;
-    margin: 0 1em;
 }
 
 /* Style link */
@@ -60,7 +59,7 @@ a{
 
 /* Style Button */
 .btn{
-    padding: .5em 1em;
+    padding: .5em 1.5em;
     background-color: #0061FF;
     color: white;
 }
@@ -97,6 +96,10 @@ a{
     display: flex;
     align-items: center;
     justify-content: flex-start;
+}
+
+.header-link li{
+    margin: 0 1em;
 }
 
 /* Header Right */
@@ -180,42 +183,93 @@ a{
     width: 100%;
     align-items: stretch;
     justify-content: space-between;
-
-    /* DEBUG */
-    min-height: 400px;
-    background-color: #fff;
-    border: 1px solid black;
 }
 
 .business-plan .section-content .col{
     width: calc(100% / 3 - 1em);
-    /* DEBUG */
-    background-color: orange;
-    border: 1px solid black;
+    border: 1px solid #DBDBDD;
 }
 
+/* Top column */
 .top-col{
     width: 100%;
-    height: 60%;
-
-    /* DEBUG */
-    background-color: green;
 }
 
+.top-col .type-subscription{
+    border-bottom: 1px solid #DBDBDD;
+    text-align: center;
+    padding: .5em 0;   
+}
+
+.top-col h3{
+    font-size: 1.5rem;
+    padding: .8em 0;
+}
+
+.top-col h4{
+    padding-bottom: .5em;
+}
+
+.top-col .month{
+    color: #DBDBDD;
+}
+
+.top-col ul{
+    margin-bottom: 3em;
+}
+
+.top-col ul li{
+    margin-top: 2em;
+}
+
+.top-col .buy-link{
+    display: block;
+    margin-top: 2em;
+}
+
+.top-col .big-container::after{
+    content: "";
+    width: 30%;
+    display: block;
+    margin-top: 2em;
+    border-bottom: 1px solid #DBDBDD;
+}
+
+/* Bottomo col */
 .bottom-col{
     width: 100%;
-    height: 40%;
 
     /* DEBUG */
-    background-color: blue;
+    height: 300px;
 }
 
+.bottom-col .big-container h4{
+    margin: 2em 0;
+}
+
+.bottom-col .big-container ul li{
+    display: flex;
+    padding-bottom: 1em;
+}
+
+.bottom-col .big-container ul li i{
+    padding-top: .5em;
+    padding-right: .5em;
+    color: blue;
+}
+
+
+.bottom-col .big-container ul li span{
+    display: inline-block;
+}
+
+/* -------------------------------------------------------  DA CONTINUARE*/
 /* Section Footer */
 .business-plan .section-footer{
     width: 100%;
 
     /* DEBUG */
-    min-height: 100px;
+    height: 200px;
     background-color: yellow;
     border: 1px solid black;
 }
