--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ html{
     margin: 0 auto;
 }
 
+.container{
+    width: 90%;
+    margin: 0 auto;
+}
+
 /* Flexbox */
 .flex{
     display: flex;
@@ -155,12 +160,11 @@ a{
 .jumbo-photo{
     width: 70%;
 }
-
+/* ----------------------------------------------------------- */
 
 /* MAIN */
 
 /* Section BUSINESS PLAN */
-
 /* Section top */
 .business-plan .section-top{
     width: 100%;
@@ -177,7 +181,7 @@ a{
     margin-right: 2em;
     margin-bottom: 1.5em;
 }
-
+/* ---------------------------------------- */
 /* Section Content */
 .business-plan .section-content{
     width: 100%;
@@ -195,7 +199,7 @@ a{
     width: 100%;
 }
 
-.top-col .type-subscription{
+.type-subscription{
     border-bottom: 1px solid #DBDBDD;
     text-align: center;
     padding: .5em 0;   
@@ -215,11 +219,7 @@ a{
 }
 
 .top-col ul{
-    margin-bottom: 3em;
-}
-
-.top-col ul li{
-    margin-top: 2em;
+    margin: 2em 0;
 }
 
 .top-col .buy-link{
@@ -234,8 +234,8 @@ a{
     margin-top: 2em;
     border-bottom: 1px solid #DBDBDD;
 }
-
-/* Bottomo col */
+/* ------------------------------------------ */
+/* Bottom col */
 .bottom-col{
     width: 100%;
 
@@ -247,34 +247,53 @@ a{
     margin: 2em 0;
 }
 
-.bottom-col .big-container ul li{
+.plan-list li{
     display: flex;
     padding-bottom: 1em;
 }
 
-.bottom-col .big-container ul li i{
+.plan-list li i{
     padding-top: .5em;
     padding-right: .5em;
-    color: blue;
 }
 
-
-.bottom-col .big-container ul li span{
+ .plan-list li span{
     display: inline-block;
 }
 
-/* -------------------------------------------------------  DA CONTINUARE*/
+/* ------------------------------------------------------- */
 /* Section Footer */
 .business-plan .section-footer{
     width: 100%;
-
-    /* DEBUG */
-    height: 200px;
-    background-color: yellow;
-    border: 1px solid black;
+    margin-top: 3em;
+    border: 1px solid #DBDBDD;
 }
 
+.business-plan .section-footer .text{
+    width: 70%;
+}
 
+.business-plan .section-footer .text h2{
+    font-size: 1.5rem;
+    margin-bottom: .5em;
+}
+
+.business-plan .section-footer .text h4{
+    font-size: 1.2rem;
+    margin-bottom: 2em;
+}
+
+.business-plan .section-footer .text p{
+    font-size: 1rem;
+    margin-bottom: 1em;
+}
+
+.business-plan .section-footer .button{
+    width: 30%;
+    padding: 2em 1em;
+}
+
+/* ------------------------------------------------------------------- CONTINUARE */
 /* section PHOTO WITH TEXT */
 .section-photo .photo{
     width: 60%;
@@ -292,7 +311,7 @@ a{
     background-color: lightsalmon;
 }
 
-
+/* ----------------------------------------------------------------- */
 /* section GRID PHOTO*/
 .grid-photo{
     /* DEBUG */
@@ -339,6 +358,7 @@ a{
     background-color: #466B2F;
 }
 
+/* ------------------------------------------------------------------ */
 /* section PARTNER */
 .section-partner{
     width: 100%;
@@ -384,7 +404,7 @@ a{
     background-color: #B4D0E7;
 }
 
-
+/* ------------------------------------------------------------ */
 /* section DOMANDE */
 .section-question{
 
@@ -426,6 +446,7 @@ a{
 }
 
 
+/* --------------------------------------------------------------------- */
 /* FOOTER */
 footer{
     padding-top: 2em;
