--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@
     box-sizing: border-box;
 }
 
+img{
+    max-width: 100%;
+    display: block;
+}
+
 /* COMMON */
 html{
     font-size: 100%;
@@ -14,16 +19,19 @@ html{
 /* Container */
 .big-container{
     width: 80%;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
 .small-container{
     width: 65%;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
-.container{
+.content{
     width: 90%;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -41,12 +49,6 @@ html{
     margin-bottom: 3em;
 }
 
-/* Reset Img */
-img{
-    max-width: 100%;
-    display: block;
-}
-
 /* Style Liste */
 ul{
     list-style-type: none;
@@ -56,8 +58,7 @@ ul li{
     display: inline-block;
 }
 
-/* Style link */
-a{
+ul li a{
     text-decoration: none;
     color: black;
 }
@@ -69,23 +70,28 @@ a{
     color: white;
 }
 
+.btn.white{
+    background-color: #fff;
+    color: black;
+}
+
 
 /* HEADER */
 /* HEADER TOP */
 .header-top{
     width: 100%;
     height: 100px;
-
     position: fixed;
     top: 0;
     left: 0;
-
     background-color: white;
 }
+
 .header-left,
 .header-right{
     width: 50%;
 }
+
 /* Header Left */
 /* Logo */
 .header-logo{
@@ -93,6 +99,7 @@ a{
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    /* AGGGIUNGERE UN PO DI PADDING SINISTRO */
 }
 
 /* Link */
@@ -181,7 +188,7 @@ a{
     margin-right: 2em;
     margin-bottom: 1.5em;
 }
-/* ---------------------------------------- */
+
 /* Section Content */
 .business-plan .section-content{
     width: 100%;
@@ -234,7 +241,7 @@ a{
     margin-top: 2em;
     border-bottom: 1px solid #DBDBDD;
 }
-/* ------------------------------------------ */
+
 /* Bottom col */
 .bottom-col{
     width: 100%;
@@ -261,7 +268,6 @@ a{
     display: inline-block;
 }
 
-/* ------------------------------------------------------- */
 /* Section Footer */
 .business-plan .section-footer{
     width: 100%;
@@ -297,18 +303,20 @@ a{
 /* section PHOTO WITH TEXT */
 .section-photo .photo{
     width: 60%;
-
-    /* DEBUG */
-    min-height: 200px;
-    background-color: #42D1F0;
 }
 
 .section-photo .text{
     width: 40%;
+    padding: 2em;
+}
 
-    /* DEBUG */
-    min-height: 200px;
-    background-color: lightsalmon;
+.section-photo .text p{
+    margin: 2em 0;
+}
+
+.section-photo .text .btn.white{
+    border: 1px solid black;
+    border-bottom: 3px solid black;
 }
 
 /* ----------------------------------------------------------------- */
@@ -362,9 +370,10 @@ a{
 /* section PARTNER */
 .section-partner{
     width: 100%;
+    
+    /* DEBUG */
     height: 80vh;
 
-    /* DEBUG */
 }
 
 /* Section top */
