Added details section grid photo

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,10 @@ ul li a{
     color: black;
 }
 
+a.btn{
+    text-decoration: none;
+}
+
 
 /* HEADER */
 /* HEADER TOP */
@@ -172,6 +176,7 @@ ul li a{
 /* MAIN */
 
 /* Section BUSINESS PLAN */
+
 /* Section top */
 .business-plan .section-top{
     width: 100%;
@@ -321,49 +326,26 @@ ul li a{
 
 /* ----------------------------------------------------------------- */
 /* section GRID PHOTO*/
-.grid-photo{
-    /* DEBUG */
-    height: 400px;
-    background-color: grey;
-}
 
 /* Section top */
-.grid-photo .section-top{
-
-    /* DEBUG */
-    height: 20%;
-    background-color: lightseagreen;
+.grid-photo .section-top h2{
+    font-size: 2rem;
+    padding-bottom: 1em;
 }
 
 /* Section content */
 .grid-photo .section-content{
     justify-content: space-between;
     flex-wrap: wrap;
-
-    /* DEBUG */
-    height: 80%;
-    background-color: lightblue;
 }
 
 .grid-photo .section-content .col{
-    width: calc(100% / 3 - 1em);
-
-    /* DEBUG */
-    height: 150px;
+    width: calc(100% / 3 - 2em);
+    margin-bottom: 2em;
 }
 
-.col .photo-card{
-    
-    /* DEBUG */
-    height: 45%;
-    background-color: #A8F14B;
-}
-
-.col .text-card{
-    
-    /* DEBUG */
-    height: 55%;
-    background-color: #466B2F;
+.col .text-card h3{
+    margin-bottom: 1em;
 }
 
 /* ------------------------------------------------------------------ */
