--- a/css/style.css
+++ b/css/style.css
@@ -363,6 +363,10 @@ a.btn{
 }
 
 /* Section top */
+.section-partner .section-top{
+    height: 20%;
+}
+
 .section-partner .section-top h2{
     font-size: 2.5rem;
     margin-bottom: 1em;
@@ -377,7 +381,7 @@ a.btn{
 
 /* Section Main */
 .section-partner .section-main{
-    height: 60%;
+    height: 50%;
 }
 
 .photo-partner{
@@ -451,11 +455,9 @@ a.btn{
 
 /* Section Footer */
 .section-partner .section-footer{
+    height: 30%;
+    align-items: center;
     background-color: #B4D0E7;
-}
-
-.section-partner .section-footer .small-container{
-    padding: 5em 0;
 }
 
 .section-footer .small-container .text{
@@ -466,13 +468,13 @@ a.btn{
 
 .section-footer .small-container .button{
     width: 40%;
+    padding: 1em;
 }
 
 
 /* ------------------------------------------------------------ */
 /* section DOMANDE */
 .section-question{
-    padding-top: 2em;
     /* DEBUG */
     height: 230px;
 }
