--- a/css/style.css
+++ b/css/style.css
@@ -42,11 +42,11 @@ html{
 
 /* Margin */
 .mg-t{
-    margin-top: 3em;
+    margin-top: 8em;
 }
 
 .mg-b{
-    margin-bottom: 3em;
+    margin-bottom: 8em;
 }
 
 /* Style Liste */
@@ -368,7 +368,7 @@ a.btn{
 }
 
 .section-partner .section-top h2{
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-bottom: 1em;
 }
 
@@ -463,7 +463,7 @@ a.btn{
 .section-footer .small-container .text{
     width: 60%;
     color: #61082B;
-    font-size: 1.8rem;
+    font-size: 2rem;
 }
 
 .section-footer .small-container .button{
@@ -471,47 +471,31 @@ a.btn{
     padding: 1em;
 }
 
-
 /* ------------------------------------------------------------ */
 /* section DOMANDE */
-.section-question{
-    /* DEBUG */
-    height: 230px;
-}
-
 /* Section top */
 .section-question .section-top{
-    
-    /* DEBUG */
-    height: 80px;
-    background-color: #DDE058;
+    font-size: 2rem;
+    padding-bottom: 2em;
+    border-bottom: 1px solid #A0A0A0;
 }
 
 /* Section Main */
-
 .row-question{
-
-    /* DEBUG */
-    height: 50px;
-    border: 1px solid black;
+    font-size: 1.2rem;
+    font-weight: 700;
+    border-bottom: 1px solid #A0A0A0;
 }
 
 .row-question .text{
     width: 85%;
-
-    /* DEBUG */
-    height: 100%;
-    background-color: #32FA6A;
+    padding: 2em 0;
 }
 
 .row-question .icon{
     width: 15%;
-
-    /* DEBUG */
-    height: 100%;
-    background-color: #50826A;
+    padding: 2em 0;
 }
-
 
 /* --------------------------------------------------------------------- */
 /* FOOTER */
