--- a/css/style.css
+++ b/css/style.css
@@ -500,36 +500,43 @@ a.btn{
 /* --------------------------------------------------------------------- */
 /* FOOTER */
 footer{
-    padding-top: 2em;
-    padding-bottom: 2em;
     background-color: #000000;
 }
 
-footer .big-container{
-
-    /* DEBUG */
-    height: 400px;
-}
-
+/* Footer Top */
 .footer-top{
+    color: white;
     justify-content: space-between;
-    /* DEBUG */
-    min-height: 80%;
-    background-color: lightblue;
+    padding: 5em 0;
 }
 
 .footer-top .col{
-    width: calc(100% / 5 - 1em);
-
-    /* DEBUG */
-    background-color: grey;
+    width: calc(100% / 5 - 2em);
 }
 
-.footer-bottom{
+.footer-top .col h3{
+    font-size: 1.5rem;
+    margin-bottom: 1em;
+}
 
-    /* DEBUG */
-    min-height: 20%;
-    background-color: #AA8F30;
+.footer-top .col ul li{
+    color: rgba(255, 255, 255, 0.647);
+    display: block;
+    margin-bottom: .5em;
+}
+
+/* Footer Bottom */
+.footer-bottom::before{
+    content: "";
+    display: block;
+    width: 130px;
+    border-bottom: 1px solid #A0A0A0;
+}
+
+#icon-language{
+    color: rgba(255, 255, 255, 0.647);
+    display: block;
+    padding: 2em 0;
 }
 
 
