--- a/css/style.css
+++ b/css/style.css
@@ -54,10 +54,6 @@ ul{
     list-style-type: none;
 }
 
-ul li{
-    display: inline-block;
-}
-
 ul li a{
     text-decoration: none;
     color: black;
@@ -80,6 +76,7 @@ a.btn{
     text-decoration: none;
 }
 
+
 .hr{
     display: block;
     width: 100px;
@@ -87,7 +84,7 @@ a.btn{
 }
 
 /* HEADER */
-/* HEADER TOP */
+/* Header TOP */
 .header-top{
     width: 100%;
     height: 100px;
@@ -103,14 +100,6 @@ a.btn{
 }
 
 /* Header Left */
-/* Logo */
-.header-logo{
-    width: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    /* AGGGIUNGERE UN PO DI PADDING SINISTRO */
-}
 
 /* Link */
 .header-link{
@@ -120,7 +109,12 @@ a.btn{
     justify-content: flex-start;
 }
 
-.header-link li{
+.header-link ul{
+    display: flex;
+    align-items: center;
+}
+
+.header-link ul li{
     margin: 0 1em;
 }
 
@@ -177,12 +171,11 @@ a.btn{
 .jumbo-photo{
     width: 70%;
 }
-/* ----------------------------------------------------------- */
+
 
 /* MAIN */
 
 /* Section BUSINESS PLAN */
-
 /* Section top */
 .business-plan .section-top{
     width: 100%;
@@ -205,6 +198,10 @@ a.btn{
     width: 100%;
     align-items: stretch;
     justify-content: space-between;
+}
+
+.business-plan .section-content .big-container{
+    padding: 1em;
 }
 
 .business-plan .section-content .col{
@@ -240,6 +237,11 @@ a.btn{
     margin: 2em 0;
 }
 
+.top-col .btn{
+    display: block;
+    text-align: center;
+}
+
 .top-col .buy-link{
     display: block;
     margin-top: 2em;
@@ -256,9 +258,6 @@ a.btn{
 /* Bottom col */
 .bottom-col{
     width: 100%;
-
-    /* DEBUG */
-    height: 300px;
 }
 
 .bottom-col .big-container h4{
@@ -292,7 +291,7 @@ a.btn{
 
 .business-plan .section-footer .text h2{
     font-size: 1.5rem;
-    margin-bottom: .5em;
+    margin: 1rem 0;
 }
 
 .business-plan .section-footer .text h4{
@@ -310,7 +309,6 @@ a.btn{
     padding: 2em 1em;
 }
 
-/* ------------------------------------------------------------------- CONTINUARE */
 /* section PHOTO WITH TEXT */
 .section-photo .photo{
     width: 60%;
@@ -330,7 +328,6 @@ a.btn{
     border-bottom: 3px solid black;
 }
 
-/* ----------------------------------------------------------------- */
 /* section GRID PHOTO*/
 
 /* Section top */
@@ -354,11 +351,9 @@ a.btn{
     margin-bottom: 1em;
 }
 
-/* ------------------------------------------------------------------ */
 /* section PARTNER */
 .section-partner{
     width: 100%;
-    /* DEBUG */
     height: 80vh;
 }
 
@@ -368,15 +363,13 @@ a.btn{
 }
 
 .section-partner .section-top h2{
-    font-size: 2rem;
+    font-size: 3rem;
     margin-bottom: 1em;
 }
 
 .section-partner .section-top a{
-    display: block;
     font-size: 1rem;
     color: blue;
-    margin-bottom: 5em;
 }
 
 /* Section Main */
@@ -471,8 +464,8 @@ a.btn{
     padding: 1em;
 }
 
-/* ------------------------------------------------------------ */
 /* section DOMANDE */
+
 /* Section top */
 .section-question .section-top{
     font-size: 2rem;
@@ -494,10 +487,11 @@ a.btn{
 
 .row-question .icon{
     width: 15%;
+    text-align: center;
     padding: 2em 0;
 }
 
-/* --------------------------------------------------------------------- */
+/* ---------------------------------- */
 /* FOOTER */
 footer{
     background-color: #000000;
