--- a/css/style.css
+++ b/css/style.css
@@ -369,12 +369,11 @@ a.btn{
 /* section PARTNER */
 .section-partner{
     width: 100%;
-    height: 80vh;
 }
 
 /* Section top */
 .section-partner .section-top{
-    height: 20%;
+    margin-bottom: 2em;
 }
 
 .section-partner .section-top h2{
@@ -388,10 +387,6 @@ a.btn{
 }
 
 /* Section Main */
-.section-partner .section-main{
-    height: 50%;
-}
-
 .photo-partner{
     width: 30%;
 }
@@ -401,7 +396,7 @@ a.btn{
 }
 
 .photo-partner .row .col{
-    height: 50%;
+    min-height: 50%;
 
     display: flex;
     justify-content: center;
@@ -453,6 +448,7 @@ a.btn{
 
 .text-partner .content svg{
     max-width: 50%;
+    margin-top: 2em;
 }
 
 .text-partner .content svg,
@@ -463,7 +459,6 @@ a.btn{
 
 /* Section Footer */
 .section-partner .section-footer{
-    height: 30%;
     align-items: center;
     background-color: #B4D0E7;
 }
