--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ html{
     margin-bottom: 8em;
 }
 
-/* Style Liste */
+/* Style LISTE */
 ul{
     list-style-type: none;
 }
@@ -59,7 +59,7 @@ ul li a{
     color: black;
 }
 
-/* Style Button */
+/* Style BUTTON */
 .btn{
     display: inline-block;
     padding: .5em 1.5em;
@@ -95,6 +95,67 @@ a.btn{
     width: 100px;
     border: 1px solid #DBDBDD;
 }
+
+/* Style RADIO BUTTON */
+.radiobtn-container{
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    margin-right: .5em;
+    margin-bottom: 2em;
+}
+
+.radiobtn-container input{
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+#name-radio{
+    display: block;
+    margin-left: 2em;
+}
+
+.radiobtn-container .checkmark {
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #eee;
+    border-radius: 50%;
+}
+
+.radiobtn-container .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+.radiobtn-container .checkmark:after {
+    top: 7.5px;
+    left: 7.5px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: white;
+}
+
+.radiobtn-container:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+
+.radiobtn-container input:checked ~ .checkmark {
+    background-color: #2196F3;
+}
+
+.radiobtn-container input:checked ~ .checkmark:after {
+    display: block;
+}
+
+
 
 /* HEADER */
 /* Header TOP */
@@ -214,12 +275,6 @@ a.btn{
     margin-bottom: 1em;
 }
 
-.business-plan .section-top .radio-btn{
-    font-size: 1.2rem;
-    display: inline-block;
-    margin-right: 2em;
-    margin-bottom: 1.5em;
-}
 
 /* Section Content */
 .business-plan .section-content{
